# hello_rust

./: .gitattributes  .gitignore  .replit  1.txt  Cargo.toml  index.js  package.json  wasm.wat
src/: lib.rs  lib2.rs  main.rs
